test/corpus/subi.txt
====
subi
====

SUBI f T M
Subi x f #NERV
subi X #page t
SUbI f #dial #Data
SUbI m -1100 m
SUBi t 424 #nerv
suBI #dial X F
SuBI #Nerv f #page
SUbI #Data #dial M
SUbi #Data #NERV #page
sUbI #NERV -778 X
suBi #DIAL -679 #Data
subI -1849 t T
SUBi -892 M #Page
subI -1302 #DIAL X
SubI -323 #Page #nerv
SubI 308 +720 F
Subi 1296 1015 #Data

---

(exa
    (subi
        (register
            (f))
        (register
            (t))
        (register
            (m)))
    (subi
        (register
            (x))
        (register
            (f))
        (register
            (hardware)))
    (subi
        (register
            (x))
        (register
            (hardware))
        (register
            (t)))
    (subi
        (register
            (f))
        (register
            (hardware))
        (register
            (hardware)))
    (subi
        (register
            (m))
        (number)
        (register
            (m)))
    (subi
        (register
            (t))
        (number)
        (register
            (hardware)))
    (subi
        (register
            (hardware))
        (register
            (x))
        (register
            (f)))
    (subi
        (register
            (hardware))
        (register
            (f))
        (register
            (hardware)))
    (subi
        (register
            (hardware))
        (register
            (hardware))
        (register
            (m)))
    (subi
        (register
            (hardware))
        (register
            (hardware))
        (register
            (hardware)))
    (subi
        (register
            (hardware))
        (number)
        (register
            (x)))
    (subi
        (register
            (hardware))
        (number)
        (register
            (hardware)))
    (subi
        (number)
        (register
            (t))
        (register
            (t)))
    (subi
        (number)
        (register
            (m))
        (register
            (hardware)))
    (subi
        (number)
        (register
            (hardware))
        (register
            (x)))
    (subi
        (number)
        (register
            (hardware))
        (register
            (hardware)))
    (subi
        (number)
        (number)
        (register
            (f)))
    (subi
        (number)
        (number)
        (register
            (hardware))))
